--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RT Design</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="logo">
-          <img src="rt.svg" alt="Logo">
+          <img id="brand" src="/images/rt.svg" alt="Logo">
         </div>
         <!-- <nav>
           <ul>
@@ -18,7 +18,7 @@
           </ul>
         </nav> -->
         <div class="contact">
-          <a href="#">Contact Us</a>
+          <a id="contact" href="#">Contact Us</a>
         </div>
       </header>
           <div class="wrapper">
