--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-          <img id="brand" src="/images/rt.svg" alt="Logo">
+          <img id="brand" src="./images/rt.svg" alt="Logo">
         </div>
         <!-- <nav>
           <ul>
