--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;800&display=swap" rel="stylesheet">
     <title>RT Design</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -18,13 +21,28 @@
           </ul>
         </nav> -->
         <div class="contact">
-          <a id="contact" href="#">Contact Us</a>
+          <a id="contact" href="#">Contact</a>
         </div>
       </header>
           <div class="wrapper">
             <main>
-        <h3 class="help_css">I CAN HELP YOU WITH...</h3>
+                <div id="hero">
+                    <h1 class="hero_heading">DIGITAL DESIGNER</h1>
+                    <aside>
+                        <p>Web Design Product Design, UI / UX Branding</p>
+                        <ul>
+                            <li>Lets get Connected</li>
+                            <li>instagram</li>
+                            <li>Linkedin</li>
+                        </ul>
+                    </aside>
+                    <p id="hero_sub">Specialize in helping startups and technology companies<br>
+                        bring their digital products to life by creating<br>
+                        sleek and visually stunning web and product designs.</p>
+                </div>
+                <h3 id="help_center" class="help_css">I CAN HELP YOU WITH...</h3>
         <div class="parent">
+            
             <div class="item">
                 <p id="span">01</p>
                 <p><strong id="span_two">UX & WIREFRAME</strong></p>
@@ -41,42 +59,6 @@
                     elevating its value and making it
                     stand out from the crowd.</p>
                 </div>
-            <div class="item">
-                <p id="span">03</p>
-                <p><strong id="span_two">UI & PROTOTYPE</strong></p>
-                <br>
-                <p id="span_three">Bring your ideas to life with aesthetic design, functional interfaces, and exceptional user experiences that make a difference</p>
-            </div>
-            <div class="item">
-                <p id="span">03</p>
-                <p><strong id="span_two">UI & PROTOTYPE</strong></p>
-                <br>
-                <p id="span_three">Bring your ideas to life with aesthetic design, functional interfaces, and exceptional user experiences that make a difference</p>
-            </div>
-            <div class="item">
-                <p id="span">03</p>
-                <p><strong id="span_two">UI & PROTOTYPE</strong></p>
-                <br>
-                <p id="span_three">Bring your ideas to life with aesthetic design, functional interfaces, and exceptional user experiences that make a difference</p>
-            </div>
-            <div class="item">
-                <p id="span">03</p>
-                <p><strong id="span_two">UI & PROTOTYPE</strong></p>
-                <br>
-                <p id="span_three">Bring your ideas to life with aesthetic design, functional interfaces, and exceptional user experiences that make a difference</p>
-            </div>
-            <div class="item">
-                <p id="span">03</p>
-                <p><strong id="span_two">UI & PROTOTYPE</strong></p>
-                <br>
-                <p id="span_three">Bring your ideas to life with aesthetic design, functional interfaces, and exceptional user experiences that make a difference</p>
-            </div>
-            <div class="item">
-                <p id="span">03</p>
-                <p><strong id="span_two">UI & PROTOTYPE</strong></p>
-                <br>
-                <p id="span_three">Bring your ideas to life with aesthetic design, functional interfaces, and exceptional user experiences that make a difference</p>
-            </div>
             <div class="item">
                 <p id="span">03</p>
                 <p><strong id="span_two">UI & PROTOTYPE</strong></p>
